# graphics

./: .stylish-haskell.yaml  .travis.yml  LICENSE  README.md  graphics.cabal
Game/: AffineTransform.hs  Graphics.hs  Sprite.hs  Stream.hs
Game/Graphics/: AffineTransform.hs  Shader.hs  Sprite.hs  Stream.hs  Utils.hs
examples/example1/: Main.hs
examples/example1/wizard/: LICENSE
examples/test/: Main.hs
src/Control/Monad/Trans/Writer/: Stricter.hs
src/Game/: Graphics.hs
src/Game/Graphics/: AffineTransform.hs  Attributes.hs  Font.hs  Shader.hs  Sprite.hs  Stream.hs  Texture.hs  Triangles.hs  Utils.hs
test/: Main.hs
