name:                graphics
version:             0.0.0
synopsis:            A library for working with 2D graphics
description:         A simple library for working with 2D
                     graphics. This library is part of the
                     haskell-game collection.
homepage:            https://github.com/haskell-game
license:             MIT
license-file:        LICENSE
author:              Jake McArthur <Jake.McArthur@gmail.com>
maintainer:          Jake McArthur <Jake.McArthur@gmail.com>
category:            Graphics
build-type:          Simple
cabal-version:       >=1.14

flag examples
  description:       Enable building of example executables
  default:           False

source-repository head
  type:              git
  location:          git://github.com/haskell-game/graphics.git

library
  build-depends:     base >= 4.5 && < 4.7,
                     bytestring == 0.10.*,
                     colour == 2.3.*,
                     lens == 3.9.*,
                     linear == 1.1.*,
                     JuicyPixels == 3.0.*,
                     OpenGLRaw == 1.3.*,
                     transformers == 0.3.*,
                     vector == 0.10.*
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   Game.Graphics.AffineTransform,
                     Game.Graphics
  other-modules:     Game.Graphics.Attributes,
                     Game.Graphics.Shader,
                     Game.Graphics.Texture,
                     Game.Graphics.Triangles,
                     Game.Graphics.Utils
  ghc-options:       -O2 -Wall
  other-extensions:  BangPatterns,
                     DeriveDataTypeable,
                     DeriveFunctor,
                     FlexibleContexts,
                     GeneralizedNewtypeDeriving,
                     OverloadedStrings,
                     RankNTypes,
                     RecordWildCards,
                     ViewPatterns

executable test
  if !flag(examples)
    buildable:       False
  build-depends:     base >= 4.5 && < 4.7,
                     colour == 2.3.*,
                     GLFW-b == 0.1.*,
                     OpenGLRaw == 1.3.*,
                     linear == 1.1.*,
                     graphics == 0.0.0,
                     time == 1.4.*
  default-language:  Haskell2010
  hs-source-dirs:    examples/test
  main-is:           Main.hs
  ghc-options:       -O2 -Wall
